Refactor FileBackedTaskManager and Task classes for improved duration handling and CSV header management